configured cookie session and cors to add my frontend origin